quick fix for line wrapping issue with info bar

--- a/visualizer/css/info.css
+++ b/visualizer/css/info.css
@@ -27,3 +27,8 @@
 #info .value {
   display: block;
 }
+
+#program-info {
+  width: 200px;
+  word-wrap: break-word;
+}
